name:                my-xmonad
version:             0.1.0.0
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable xmonad
  main-is:             xmonad.hs
  other-modules:
    Workspaces
    Keys
    Actions
    Constants
    Internet
    Layout
    Modifier
    Solarized

  build-depends:       base         >= 4.9 && < 5
                     , containers   >= 0.5 && < 0.6
                     , xmonad       >= 0.13 && < 0.14
                     , xmonad-contrib
                     , X11
  hs-source-dirs:      ., lib
  default-language:    Haskell2010
